fix header z-index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13008,13 +13008,13 @@ li {
 
 #header-default {
   position: absolute;
-  z-index: 10;
   width: 100%;
   font-family: 'Cormorant Garamond', serif; }
   @media screen and (min-width: 1201px) {
     #header-default {
       transform: translatey(0%);
-      transition: transform .3s ease-in-out; } }
+      transition: transform .3s ease-in-out;
+      z-index: 10; } }
   #header-default.fixed {
     position: fixed;
     top: -53px;
